--- a/index.html
+++ b/index.html
@@ -518,11 +518,11 @@
         <div class="logo-text">AGENTFISH</div>
         <div class="header-links">
             <a href="#lore">LORE</a>
-            <a href="https://x.com/YOURHANDLE" target="_blank" class="x-link">
+            <a href="https://x.com/AgentFishSol" target="_blank" class="x-link">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                 </svg>
-                @YOURHANDLE
+                @AgentFishSol
             </a>
         </div>
     </header>
